manual merge of ces_components