@@ -9,11 +9,9 @@ permalink: v1_0_0-docs/ces_components/
 
 ## Overview
 
-<<<<<<< HEAD
-This section provides information about all components required to build a resilient Concept Extraction API with dynamically updated Gazetteer dictionaries. If you only want to extract named entities from text with a static dictionary and are not interested in high availability, you can do it with a single worker.
-=======
+
 This section provides information about all components required to build a resilient Concept Extraction API with dynamically updated Gazetteer dictionaries. If you only need to extract named entities from text with a static dictionary and are not interested in high availability, you can do it with a single worker.
->>>>>>> DSP-791
+
 
 ## Worker <a id="worker_config"/>
 
@@ -22,42 +20,18 @@ This section provides information about all components required to build a resil
 
 #### General
 
-<<<<<<< HEAD
-* `-Dworker.name` (optional) - a sub-directory in the worker persistence directory, points to `~/.ces-worker` by default.
-
-#### GATE
-
-* `-Dgate.app.location` (required) - a full path to the `*.xgapp` file to load, including the filename and extension. It should
-start with `file:/`, otherwise it is interpreted as relative to the application context.
-* `-Dpipeline-pool-max-size` (optional, default = 1) - the maximum number of GATE pooled applications. It shows
-the number of simultaneous annotations this worker supports.
-=======
 * `-Dworker.name` (optional) - a sub-directory in the worker persistence directory. By default, it points to `~/.ces-worker`.
 
 #### GATE
 
 * `-Dgate.app.location` (required) - a full path to the `*.xgapp` file that will be loaded, including the filename and extension. It has to start with `file:/`, otherwise it is interpreted as relative to the application context.
 * `-Dpipeline-pool-max-size` (optional, default = 1) - the maximum number of GATE pooled applications. It shows the number of simultaneous annotations this worker supports.
->>>>>>> DSP-791
+
 
 #### Recommended JVM settings
 
 * GC:
-<<<<<<< HEAD
-   * `-XX:+UseConcMarkSweepGC -verbose:gc-verbose:sizes`
-   * `-Xloggc:/path/to/logs/gc.log`
-   * `-XX:+PrintGCDetails`
-   * `-XX:+PrintGCDateStamps`
-   * `-XX:+PrintTenuringDistribution`
-   * `-XX:+UseGCLogFileRotation`
-   * `-XX:NumberOfGCLogFiles=5`
-   * `-XX:GCLogFileSize=2M`
-* Compiler:
-    `-XX:+TieredCompilation`
-* `-Xmx:` depends on the pipeline in use - each pipeline package should state how much memory it requires.
 
-<a name="coordinator"></a>
-=======
    * `-XX:+UseConcMarkSweepGC -verbose:gc-verbose:sizes`;
    * `-Xloggc:/path/to/logs/gc.log`;
    * `-XX:+PrintGCDetails`;
@@ -70,7 +44,6 @@ the number of simultaneous annotations this worker supports.
     `-XX:+TieredCompilation`.
 * `-Xmx:` depends on the pipeline in use. Each pipeline package has to state how much memory it requires.
 
->>>>>>> DSP-791
 ## Coordinator
 
 <a name="coordinator-configuration"></a>
@@ -82,18 +55,6 @@ All timeouts are in milliseconds unless specified otherwise.
 
 #### General
 
-<<<<<<< HEAD
-* `-Dcoordinator.name` (optional) - the name of this Cordinator. It is used for the suffix of the directory under home in which
-the Coordinator persists its state.
-* `-Dcoordinator.stateDirectory` (optional, default = `<home>/.coordinator`) - sets the directory for the state files of the Coordinator;
-* `-Dcoordinator.baseUrl` (required) - the base address of this Coordinator. It gives the URLs  that point
-back to the Coordinator to the workers.
-
-#### GraphDB
-
-* `-Dcoordinator.sparql.endpoint` (required) - the remote SPARQL endpoint URL, including the repository. Usually in the form of
-http://<host>:<port>/graphdb/repositories/<repo_name>.
-=======
 * `-Dcoordinator.name` (optional) - the name of this coordinator. It is used for the suffix of the directory under HOME in which the coordinator persists its state.
 * `-Dcoordinator.stateDirectory` (optional, default = `<home>/.coordinator`) - sets the directory for the state files of the coordinator;
 * `-Dcoordinator.baseUrl` (required) - the base address of this coordinator. It gives the workers URLs that point back to the coordinator.
@@ -101,7 +62,6 @@ http://<host>:<port>/graphdb/repositories/<repo_name>.
 #### GraphDB
 
 * `-Dcoordinator.sparql.endpoint` (required) - the remote SPARQL endpoint URL, including the repository. Usually in the form of `http://<host>:<port>/graphdb/repositories/<repo_name>`.
->>>>>>> DSP-791
 * `-Dcoordinator.sparql.connectionTimeout` (optional, default = 10000) - establishes the connection to the SPARQL endpoint timeout;
 * `-Dcoordinator.sparql.socketTimeout` (optional, default = 600000) - the socket timeout for the SPARQL queries.
 
@@ -117,33 +77,17 @@ http://<host>:<port>/graphdb/repositories/<repo_name>.
 
 * `-Dcoordinator.updates.checkDelay` (optional, default = 10000) - the initial delay before the first check for updates;
 * `-Dcoordinator.updates.checkRate` (optional, default = 600000) - the interval between the checks for updates;
-<<<<<<< HEAD
-* `-Dcoordinator.updates.maxWorkersToVerify` (optional, default = 2) - a change is first verified on a single worker
-before it is propagated to all workers. This specifies the maximum number of workers that it attempts to change before giving up;
-=======
 * `-Dcoordinator.updates.maxWorkersToVerify` (optional, default = 2) - a change is first verified on a single worker before it is propagated to all workers. This specifies the maximum number of workers that it attempts to change before giving up;
->>>>>>> DSP-791
 * `-Dcoordinator.updates.verificationTimeout` (optional, default = 1800000) - the maximum wait time for the update verification.
 
 #### Updates (models)
 
 * `-Dcoordinator.models.endpoint` (optional) - the training node base URL. If not specified, the worker models are not updated;
-<<<<<<< HEAD
-* `-Dcoordinator.models.schedule` (optional, default = "0 0 2 * * ?") - a cron expression, specifying when to check for updates.
-See [Spring's CronSequenceGenerator documentation]([http://docs.spring.io/spring/docs/current/javadoc-api/org/springframework/scheduling/support/CronSequenceGenerator.html])
-for the full syntax and explanation. The default value checks for models every day at 2am.
-
-#### Annotation
-
-* `-Dcoordinator.annotation.freeWorkerTimeout` (optional, default = 30000) - the maximum wait time for a free worker to
-become available for annotation;
-=======
 * `-Dcoordinator.models.schedule` (optional, default = "0 0 2 * * ?") - a cron expression, specifying when to check for updates.  The default value checks for models every day at 2 AM. For the full syntax and explanation, see [Spring's CronSequenceGenerator documentation](http://docs.spring.io/spring/docs/current/javadoc-api/org/springframework/scheduling/support/CronSequenceGenerator.html).
 
 #### Annotation
 
 * `-Dcoordinator.annotation.freeWorkerTimeout` (optional, default = 30000) - the maximum wait time for a free worker to become available for annotation;
->>>>>>> DSP-791
 * `-Dcoordinator.annotation.connectionTimeout` (optional, default = 10000) - establishes the connection to a worker for the annotation timeout;
 * `-Dcoordinator.annotation.socketTimeout` (optional, default = 60000) - the socket timeout for annotation to a worker.
 
@@ -154,12 +98,7 @@ become available for annotation;
 
 #### Files
 
-<<<<<<< HEAD
-All files relative to `~/.coordinator/\[$\{coordinator.name\}\]/`, which is `~/.coordinator`, if `coordinator.name` is unset, and
-`~/.coordinator/<coordinator.name>/`, if it is set.
-=======
 All files relative to `~/.coordinator/\[$\{coordinator.name\}\]/`, which is `~/.coordinator`, if `coordinator.name` is unset, and `~/.coordinator/<coordinator.name>/`, if it is set.
->>>>>>> DSP-791
 
 * `workers.json` - the persisted workers list and configuration;
 * `sparql-update-history.json` - the update history for `SparqlUpdatesManager`;
@@ -173,39 +112,21 @@ All files relative to `~/.coordinator/\[$\{coordinator.name\}\]/`, which is `~/.
   * `-XX:+PrintTenuringDistribution`;
   * `-XX:+UseGCLogFileRotation`;
   * `-XX:NumberOfGCLogFiles=5`;
-<<<<<<< HEAD
-  * `-XX:GCLogFileSize=2M`;
-* Compiler: `-XX:+TieredCompilation`;
-* `-Xmx:` depends on the pipeline in use - each pipeline should come with memory requirements.
-=======
   * `-XX:GCLogFileSize=2M`.
 * Compiler: `-XX:+TieredCompilation`;
 * `-Xmx:` depends on the pipeline in use. Each pipeline should come with memory requirements.
->>>>>>> DSP-791
 
 <a name="GraphDBandEUFplugin"></a>
 ## GraphDB and EUF plug-in
 
-<<<<<<< HEAD
-This is the semantic database required to enable the dynamic dictionary updates functionality. If you do not have GraphDB, you can get the latest version [here](http://info.ontotext.com/graphdb-lite-eval-graphdb). For information how to install, etc., see its [ documentation](https://confluence.ontotext.com/display/GraphDB6/Home).
-
-EUF stands for 'Entity Updates Feed'. This plug-in publishes entity update feeds that are used by the Coordinator.
-=======
 This is the semantic database required to enable the dynamic dictionary updates functionality. If you do not have GraphDB, you can get the latest version [here](http://info.ontotext.com/graphdb-lite-eval-graphdb). For information how to install, etc., see its [ documentation](http://graphdb.ontotext.com/display/GraphDB62/Home).
 
 The EUF plug-in publishes entity update feeds that are used by the coordinator.
->>>>>>> DSP-791
 
 <a name="EUF-configuration"></a>
 ### Configuration
 
 To install the EUF plug-in in GraphDB:
-<<<<<<< HEAD
-1. Provide the following Java parameter to GraphDB on startup
-```-Dregister-external-plugins=/your/plugins/home```.
-2. Unpack the [EUF plug-in zip. file](http://maven.ontotext.com/content/repositories/publishing-releases/com/ontotext/ces/graphdb-euf-plugin/1.0.0/graphdb-euf-plugin-1.0.0.zip) in your plugins home prior to starting GraphDB.
-=======
 
 1. Provide the following Java parameter to GraphDB on startup `-Dregister-external-plugins=/your/plugins/home`.
 2. Unpack the [EUF plug-in zip. file](http://maven.ontotext.com/content/repositories/publishing-releases/com/ontotext/ces/graphdb-euf-plugin/1.0.0/graphdb-euf-plugin-1.0.0.zip) in your plug-ins HOME prior to starting GraphDB.
->>>>>>> DSP-791
